--- a/CodeValidate&SuggestionJS.ipynb
+++ b/CodeValidate&SuggestionJS.ipynb
@@ -15,6 +15,20 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Projeto de Análise de Dados\n",
+        "### Desenvolvido por [Ian Rodrigues dos Reis Paixão]\n",
+        "\n",
+        "Este notebook foi criado por **[Ian Rodrigues dos Reis Paixão]**, com o objetivo de criar um modelo LTSM para analise e correção de codigos em javascript.    \n",
+        "**Data de Criação:** [07/10/2024]  \n",
+        "**Contato:** [iang.master100@gmail.com]  "
+      ],
+      "metadata": {
+        "id": "8TEVEw06g8E8"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import numpy as np\n",
