--- a/Hotmart.ipynb
+++ b/Hotmart.ipynb
@@ -2,6 +2,21 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "source": [
+        "# Projeto de Análise de Dados\n",
+        "### Desenvolvido por [Ian Rodrigues dos Reis Paixão]\n",
+        "\n",
+        "Este notebook foi criado por **[Ian Rodrigues dos Reis Paixão]**, com o objetivo de analisar as reviews de produtos comprados buscando info como paavras mais frequentes, frequencia dos reviews etc.   \n",
+        "**Data de Criação:** [07/11/2024]  \n",
+        "**Contato:** [iang.master100@gmail.com]  "
+      ],
+      "metadata": {
+        "id": "htvXoAyMhrd_"
+      },
+      "id": "htvXoAyMhrd_"
+    },
+    {
+      "cell_type": "markdown",
       "id": "2ac4c3b2-db3c-4d59-bb11-c01bca4f3a94",
       "metadata": {
         "id": "2ac4c3b2-db3c-4d59-bb11-c01bca4f3a94"
@@ -68,7 +83,7 @@
       "id": "4f8ac367-04ba-43f5-acbf-070812e6da72",
       "metadata": {
         "id": "4f8ac367-04ba-43f5-acbf-070812e6da72",
-        "outputId": "f9ed4436-a282-4021-8b42-0f8ca2490650"
+        "outputId": "283ae01f-735e-49cb-e6fc-66554af41405"
       },
       "outputs": [
         {
@@ -263,7 +278,7 @@
       "id": "bf6999b4-07c2-437f-a81c-922dbf7c95c5",
       "metadata": {
         "id": "bf6999b4-07c2-437f-a81c-922dbf7c95c5",
-        "outputId": "64dd1559-e5e5-4aa1-803c-0ab841388023"
+        "outputId": "f64d52bb-a096-4f49-948b-dd6f6e6a3930"
       },
       "outputs": [
         {
@@ -402,7 +417,7 @@
       "id": "53cbfd92-a814-4f1c-8646-57a3ed5b60e3",
       "metadata": {
         "id": "53cbfd92-a814-4f1c-8646-57a3ed5b60e3",
-        "outputId": "2113f603-be89-4551-b98e-12185845e01f"
+        "outputId": "589b56e5-e65d-4289-9a19-8a0f9d9c843d"
       },
       "outputs": [
         {
@@ -461,7 +476,7 @@
       "id": "d9d03508-8647-4740-99fd-5ed7f2382d70",
       "metadata": {
         "id": "d9d03508-8647-4740-99fd-5ed7f2382d70",
-        "outputId": "0ead5e73-31de-49c1-c378-f577e4f2295b"
+        "outputId": "06c14115-78f2-45fa-e296-d64140ffb3ac"
       },
       "outputs": [
         {
@@ -527,7 +542,7 @@
       "id": "857c456a-ab7c-486e-b8c1-44b9bdedb25d",
       "metadata": {
         "id": "857c456a-ab7c-486e-b8c1-44b9bdedb25d",
-        "outputId": "4465564f-5c8e-4d83-ce3a-0659eb89e05d"
+        "outputId": "5d1ab413-3a5b-463f-ca25-24c118252ddb"
       },
       "outputs": [
         {
@@ -566,7 +581,7 @@
       "id": "b268fe9d-4fb1-4802-96c6-f769aef9039f",
       "metadata": {
         "id": "b268fe9d-4fb1-4802-96c6-f769aef9039f",
-        "outputId": "63eacebb-a8d1-4683-8ad9-ac7fa442fa43"
+        "outputId": "3c8f4a1e-704a-4eaa-dabf-423c089822e7"
       },
       "outputs": [
         {
@@ -681,7 +696,7 @@
       "id": "2c3a7a49-a0f2-4d5c-b5a9-7bf66d3c4b03",
       "metadata": {
         "id": "2c3a7a49-a0f2-4d5c-b5a9-7bf66d3c4b03",
-        "outputId": "da7766d6-c279-4348-a375-ef79b2f888fa"
+        "outputId": "be3b8ee7-8c18-4db5-f49e-95c28f7ad0c2"
       },
       "outputs": [
         {
@@ -749,7 +764,7 @@
       "id": "3ad05871-243d-4567-a748-ce0c3cdb05e6",
       "metadata": {
         "id": "3ad05871-243d-4567-a748-ce0c3cdb05e6",
-        "outputId": "84251722-a0ec-49ce-e093-05ea171bba1a"
+        "outputId": "dd83f649-9a36-4c42-f661-891901ba8d5c"
       },
       "outputs": [
         {
@@ -801,7 +816,7 @@
       "id": "cdb2a5db-c9ac-4053-bfe2-3a40e20aec16",
       "metadata": {
         "id": "cdb2a5db-c9ac-4053-bfe2-3a40e20aec16",
-        "outputId": "02aeb13f-3897-4d16-e190-ddc0a5bdc9f6"
+        "outputId": "8d9b3502-c4cf-432e-814c-57f6506bf77b"
       },
       "outputs": [
         {
@@ -846,7 +861,7 @@
       "id": "a3eb190f-4fb0-4fde-8102-2128cb2a377f",
       "metadata": {
         "id": "a3eb190f-4fb0-4fde-8102-2128cb2a377f",
-        "outputId": "199197a6-dbdc-4306-c43b-210b821533f2"
+        "outputId": "afa6025b-6866-4f37-b3d1-501361b306af"
       },
       "outputs": [
         {
@@ -1007,7 +1022,7 @@
       "id": "abc400e5-f1bb-408a-ab1f-0c42b0a81a49",
       "metadata": {
         "id": "abc400e5-f1bb-408a-ab1f-0c42b0a81a49",
-        "outputId": "62608d27-cc11-40d9-b459-b3df6d8a3bab"
+        "outputId": "4947ed1a-bb68-4b0b-dbb4-67fd8cd6a5f7"
       },
       "outputs": [
         {
@@ -1100,7 +1115,7 @@
       "id": "b9092c8b-4cc8-40e3-a879-31058c951d66",
       "metadata": {
         "id": "b9092c8b-4cc8-40e3-a879-31058c951d66",
-        "outputId": "a6fe2300-7249-4e97-99a3-95cb4c1823a3"
+        "outputId": "5895b0d8-d1eb-44b3-ecd0-b7fe77c26b77"
       },
       "outputs": [
         {
@@ -1187,7 +1202,7 @@
       "id": "38aad79d-86cf-49dd-bf71-b6d861bd948f",
       "metadata": {
         "id": "38aad79d-86cf-49dd-bf71-b6d861bd948f",
-        "outputId": "f9497de3-c437-49e0-993b-021c9390e21f"
+        "outputId": "653f96ba-d030-4821-90a5-b51cb741f344"
       },
       "outputs": [
         {
@@ -1226,7 +1241,7 @@
       "id": "65a91a87-f243-4151-9c88-b1ef5f3c041e",
       "metadata": {
         "id": "65a91a87-f243-4151-9c88-b1ef5f3c041e",
-        "outputId": "527f6c9a-b2ad-491b-8d40-66331f55753a"
+        "outputId": "ad15591d-a132-4e79-c397-3b98b43b5e72"
       },
       "outputs": [
         {
@@ -1318,7 +1333,7 @@
       "id": "f7ff4484-15a1-406f-9d97-9aa6061e3993",
       "metadata": {
         "id": "f7ff4484-15a1-406f-9d97-9aa6061e3993",
-        "outputId": "2a15dda5-828a-4ad9-ac6b-da60f0137324"
+        "outputId": "620d8f18-1858-4ebb-dabe-4a0c3fd2384d"
       },
       "outputs": [
         {
@@ -1353,7 +1368,7 @@
       "id": "bd3781e5-6ef2-442f-baeb-11756a33e437",
       "metadata": {
         "id": "bd3781e5-6ef2-442f-baeb-11756a33e437",
-        "outputId": "a8ca02cc-caaf-4afc-af9e-74ff595e8c8c"
+        "outputId": "2aa51054-3f6a-4461-b36c-929300c6bb89"
       },
       "outputs": [
         {
@@ -1445,7 +1460,7 @@
       "id": "29d9575b-8406-4c7a-991d-6ea5395201a0",
       "metadata": {
         "id": "29d9575b-8406-4c7a-991d-6ea5395201a0",
-        "outputId": "d587bc47-3b47-427f-935d-a978422de382"
+        "outputId": "0eb4b15a-9bcd-4df1-ed0a-028d251a78c1"
       },
       "outputs": [
         {
@@ -1590,7 +1605,7 @@
       "id": "665d1dc7-68a9-43d5-942d-a1d6ab051eea",
       "metadata": {
         "id": "665d1dc7-68a9-43d5-942d-a1d6ab051eea",
-        "outputId": "ea353d20-a4a6-46bb-958d-e0da7368dce8"
+        "outputId": "37162361-1832-4186-901e-495294118e1e"
       },
       "outputs": [
         {
@@ -1729,7 +1744,7 @@
       "id": "e3c15e8f-04bf-4c06-9f87-730dd47d0026",
       "metadata": {
         "id": "e3c15e8f-04bf-4c06-9f87-730dd47d0026",
-        "outputId": "e5506e4b-5dc4-44ca-e697-a6c792d6d03a"
+        "outputId": "27b56396-3b1b-4f28-8673-3fc27af9d872"
       },
       "outputs": [
         {
@@ -1785,7 +1800,7 @@
       "id": "fce11535-e2ce-499a-a3ae-5a59383eb508",
       "metadata": {
         "id": "fce11535-e2ce-499a-a3ae-5a59383eb508",
-        "outputId": "6db82c15-743a-40e2-e6be-b3dd940b9d6b"
+        "outputId": "1303adab-37e9-49e8-8a9e-5901f86bcceb"
       },
       "outputs": [
         {
@@ -1840,7 +1855,7 @@
       "id": "d6c2985e-54c3-44c3-8422-53aae18bda00",
       "metadata": {
         "id": "d6c2985e-54c3-44c3-8422-53aae18bda00",
-        "outputId": "94ac5b97-a518-4469-cdb1-15723d0a2f31"
+        "outputId": "91966822-7aed-4640-c761-65736946038d"
       },
       "outputs": [
         {
@@ -1947,7 +1962,7 @@
       "id": "7ddccbbd-51eb-4aa5-9e74-007b7fdc5502",
       "metadata": {
         "id": "7ddccbbd-51eb-4aa5-9e74-007b7fdc5502",
-        "outputId": "9edf173a-e683-451e-b47c-088f2776b115"
+        "outputId": "c833e7dc-ba7b-4027-b6ce-ed73c5556c09"
       },
       "outputs": [
         {
