--- a/Pocos_Ian_Rodrigues.ipynb
+++ b/Pocos_Ian_Rodrigues.ipynb
@@ -17,8 +17,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "*   Nome: Ian Rodrigues dos Reis Paixão\n",
-        "-------------------------------------------"
+        "# Projeto de Análise de Dados\n",
+        "### Desenvolvido por [Ian Rodrigues dos Reis Paixão]\n",
+        "\n",
+        "Este notebook foi criado por **[Ian Rodrigues dos Reis Paixão]**, com o objetivo de Analisar metricas fornecidas sobre perfurações.  \n",
+        "**Data de Criação:** [08/03/2024]  \n",
+        "**Contato:** [iang.master100@gmail.com]  \n"
       ],
       "metadata": {
         "id": "HW7EWGvd0Edt"
