--- a/Hotmart.ipynb
+++ b/Hotmart.ipynb
@@ -6,7 +6,7 @@
         "# Projeto de Análise de Dados\n",
         "### Desenvolvido por [Ian Rodrigues dos Reis Paixão]\n",
         "\n",
-        "Este notebook foi criado por **[Ian Rodrigues dos Reis Paixão]**, com o objetivo de analisar as reviews de produtos comprados buscando info como paavras mais frequentes, frequencia dos reviews etc.   \n",
+        "Este notebook foi criado por **[Ian Rodrigues dos Reis Paixão]**, com o objetivo de analisar as reviews de produtos comprados buscando info como palavras mais frequentes, frequencia dos reviews etc.   \n",
         "**Data de Criação:** [07/11/2024]  \n",
         "**Contato:** [iang.master100@gmail.com]  "
       ],
